--- a/src/components/DishBar/dishbar.scss
+++ b/src/components/DishBar/dishbar.scss
@@ -7,9 +7,8 @@
   align-items: center;
   background-color: white;
   width: 100%;
-  height: 60px;
+  height: 64px;
   border-radius: 10px;
-  padding-left: 5px;
   margin-bottom: 8px;
   box-shadow: $bar-shadow;
 }
@@ -18,9 +17,9 @@
   position:relative;
   width:7px;
   height: 6.13px;
-  bottom: 21px;
-  right: 3px;
-  border-radius:50%;
+  bottom: 22px;
+  right: 4px;
+  border-radius:60%;
   border: 3px solid ;
   
 }
@@ -29,8 +28,7 @@
   width: 25%;
   display: flex;
   align-items: center;
-  
- 
+  margin-left: 6px;
 }
 
 .dish-img{
@@ -38,8 +36,8 @@ clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
 }
 
 .dish-img {
-  width: 50px;
-  height: 50px  ;
+  width: 52px;
+  height: 52px  ;
   border-radius: 10px;
 }
 
@@ -53,6 +51,7 @@ clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
   display: flex;
   flex-direction: column;
   width: 80%;
+  justify-content: center;
 }
 
 .dish-name {
@@ -68,6 +67,7 @@ clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
   font-size: $fts-1;
   color: $SubHead-Color;
 }
+
 .dish-price {
   width: 20%;
   font-family: $SubFont;
